safari: Fix some spacing issues in Jira

--- a/share/osx/safari/customizations.css
+++ b/share/osx/safari/customizations.css
@@ -13,3 +13,17 @@ body.loggedin section.onboardingbar,
 body.loggedin #sr-header-area .width-clip button.redesign-beta-optin {
   display: none!important;
 }
+
+/**
+ * jira.com: Fix card titles on the board-view so that they aren't truncated.
+ */
+body#jira .ghx-issue-fields .ghx-summary .ghx-inner {
+  max-height: none!important;
+}
+
+/**
+ * jira.com: Fix "Issue Links" summaries so they aren't truncated.
+ */
+body#jira .links-list .link-content .link-summary {
+  white-space: normal!important;
+}
